# N-Body

./: .gitmodules  CMakeLists.txt  Quadtree.cpp  Quadtree.hpp  Renderer.cpp  Renderer.hpp  Simulator.cpp  Simulator.hpp  compile_commands.json  main.cpp  mingw-toolchain.cmake
.cache/clangd/index/: Quadtree.cpp.A05B96324D352461.idx  Quadtree.hpp.3D9E5F349C74EBDA.idx  Renderer.cpp.6D6E2311AD7F539F.idx  Renderer.hpp.B63172D006945201.idx  Simulator.cpp.45436B70224390F5.idx  Simulator.hpp.D260FE72071CFDD6.idx  UIElements.cpp.822D73A0D75A0C61.idx  UIElements.hpp.BA0F5E43DCFFA45E.idx  _vectorize.hpp.44ED05DDDADC32F4.idx  afadjust.c.810EB8629EC5C7B4.idx  afadjust.h.74FEA8968F25755B.idx  afblue.c.A8E805A47670E0BA.idx  afblue.h.F911331E2FB49532.idx  afcjk.c.C2F8B54BB2F4E89B.idx  afcjk.h.1629B899EB411CF7.idx  afcover.h.AFCF1467EB8A7C8C.idx  afdummy.c.061F03A49DF0BE4A.idx  afdummy.h.4BC162A4686E77E1.idx  aferrors.h.81A0989BA2C1E2A9.idx  afglobal.c.E8D484FBB89B50A5.idx  afglobal.h.2F0A3838CB4A1C3A.idx  afgsub.c.BBE6D282F05C4B66.idx  afgsub.h.F9307E6CADB61115.idx  afhints.c.AA5C32B9A55EAE73.idx  afhints.h.221E60E20A4792D4.idx  afindic.c.5A7659E7B6CD4B22.idx  afindic.h.FC38BA50D0C7F730.idx  aflatin.c.5717B8F54074F6F9.idx  aflatin.h.7718266D38A2B744.idx  afloader.c.EA94E8D01AC27819.idx  afloader.h.8F5ABD8B534E1925.idx  afmodule.c.27F057FFCB8EE01F.idx  (+477 more)
linuxBuild/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json  nbody_sim
shaders/: fragment.glsl  line_fragment.glsl  line_geometry.glsl  line_vertex.glsl  point_fragment.glsl  point_vertex.glsl  text_fragment_shader.glsl  text_vertex_shader.glsl  triangle_fragment.glsl  triangle_vertex.glsl  vertex.glsl
src/: Quadtree.cpp  Quadtree.hpp  Renderer.cpp  Renderer.hpp  Simulator.cpp  Simulator.hpp  UIElements.cpp  UIElements.hpp  main.cpp
winBuild/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
winBuild/,/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
(+20 files in other folders)
